nginx-php-fpm/dzzoffice/dzzoffice-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-phpfpm-dzzoffice
  namespace: default
  labels:
    app: cheese
    task: nginx-phpfpm-dzzoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheese
      task: nginx-phpfpm-dzzoffice
  template:
    metadata:
      labels:
        app: cheese
        task: nginx-phpfpm-dzzoffice
        version: v0.0.1
    spec:
      nodeSelector:
        role: hotstone.com.cn
      containers:
      - name: nginx-phpfpm-dzzoffice
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
          - mountPath: "/data/html"
            name: data
          - mountPath: "/etc/nginx/conf.d/"
            name: index
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: dzzoffice-data
      - name: index
        configMap:
          name: nginx-phpfpm-dzzoffice-default
          items:
            - key: default.conf
              path: default.conf
