nginx-php-fpm/dzzoffice/dzzoffice-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-phpfpm-dzzoffice
  namespace: default
spec:
  type: NodePort
  ports:
   - name: http
     port: 80
     targetPort: 80
     protocol: TCP
     nodePort: 30900
  selector:
    app: cheese
    task: nginx-phpfpm-dzzoffice
