nginx-php-fpm/dzzoffice/dzzoffice-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-phpfpm-dzzoffice
  namespace: default
spec:
  rules:
  - host: data.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-phpfpm-dzzoffice
          servicePort: http
